# issueoracle-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT-GUIDE.md  DONE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml  开发计划.md  整体设计方案.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  pattern_request.yml
.github/workflows/: ci.yml  migrate-detectoracle-path.yml  release.yml
docs/: RENAME_MIGRATION.md
skills/detectoracle/: SKILL.md  nux-wizard.md
skills/detectoracle/agents/: default.yaml
skills/detectoracle/evals/: run_eval.py
skills/detectoracle/evals/fixtures/py-missing-finally/: experience.json
skills/detectoracle/evals/golden/: py-bare-except.expected.json  py-fastapi-async-session-leak.expected.json  py-fastapi-cors-wildcard.expected.json  py-missing-finally.expected.json  ts-express-error-handling-missing.expected.json
skills/detectoracle/packs/python/fastapi/: patterns.yaml
skills/detectoracle/references/: mining-workflow.md  pattern-schema.md  review-report-format.md  threat-model.md
skills/detectoracle/scripts/: build-skill.sh  build_skill.py  detectoracle.py  evaluate_patterns.py  issueoracle.py  store.py  verify.py
skills/detectoracle/scripts/lib/: code_index.py  env.py  experience.py  fs.py  github_fetch.py  github_search.py  http.py  issue_filter.py  log.py  pack_loader.py  pattern_match.py  profile.py  render.py  review.py  safety.py  schema.py  version.py
skills/issueoracle/: SKILL.md  nux-wizard.md
skills/issueoracle/evals/: run_eval.py
skills/issueoracle/evals/golden/: py-bare-except.expected.json  py-fastapi-async-session-leak.expected.json  py-fastapi-cors-wildcard.expected.json  py-fastapi-sync-in-async.expected.json  py-missing-finally.expected.json  py-raw-sql-injection.expected.json  py-unclosed-file-handle.expected.json  ts-callback-error.expected.json  ts-express-auth-bypass-path.expected.json  ts-express-error-handling-missing.expected.json  ts-insecure-random.expected.json
skills/issueoracle/packs/python/fastapi/: patterns.yaml
skills/issueoracle/references/: mining-workflow.md  review-report-format.md  threat-model.md
skills/issueoracle/scripts/: build-skill.sh  build_skill.py  detectoracle.py  evaluate_patterns.py  issueoracle.py  store.py  verify.py
skills/issueoracle/scripts/lib/: cache.py  code_index.py  config.py  env.py  evidence_linker.py  experience.py  git.py  github_fetch.py  github_search.py  http.py  issue_filter.py  pack_loader.py  pattern_extract.py  pattern_match.py  profile.py  render.py  review.py  safety.py  schema.py  version.py
tests/: conftest.py  test_code_index.py  test_evidence_linker.py  test_experience.py  test_git.py  test_github_search.py  test_http_cache.py  test_integration.py  test_issue_filter.py  test_pack_loader.py  test_pattern_extract.py  test_pattern_match.py  test_profile.py  test_render.py  test_review.py  test_safety.py  test_schema.py  test_store.py
(+28 files in other folders)
