[project]
name = "issueoracle-skill"
version = "0.1.0"
description = "Review local code using OSS issue-derived bug patterns with concrete evidence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["skills/issueoracle/scripts", "tests"]
exclude = ["skills/issueoracle/evals/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-q",
    "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["skills/issueoracle/scripts", "tests"]
omit = [
    "dist/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
omit = [
    "dist/*",
]
